# protov

./: Cargo.toml  README.md
prost-email/: Cargo.toml  README.md  build.rs
prost-email/example/: email.fdset  email.pb
prost-email/proto/: email.proto
prost-email/src/: lib.rs
src/: formatter.rs  lib.rs
src/serde_protov/: de.rs
