[package]
name = "protov"
version = "0.1.0"
authors = ["Tom Milligan <tommilligan@users.noreply.github.com>"]
edition = "2018"

[dependencies]
hexyl = { git = "https://github.com/tommilligan/hexyl", branch = "lib" }
exitfailure = "^0.5.1"
failure = "^0.1.5"
erased_serde_json = "^0.1.1"
protobuf = "^2.7.0"
serde = "^1.0.94"
serde_json = "^1.0.40"
serde-protobuf = "^0.8.1"
serde-value = "^0.6.0"
structopt = "^0.2.18"

[workspace]
members = [
    "prost-email",
]
