[package]
name = "serialize-emails"
version = "0.1.0"
authors = ["Tom Milligan <tommilligan@users.noreply.github.com>"]
edition = "2018"

[dependencies]
bytes = "^0.4.12"
exitfailure = "^0.5.1"
failure = "^0.1.5"
lipsum = "^0.6.0"
prost = "^0.5.0"
rand = "^0.6.0"
rand_core = "^0.4.0"
rand_xorshift = "^0.1"
structopt = "^0.2.18"

[build-dependencies]
prost-build = "^0.5.0"
